--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/ArcadiaMediaGroup/Gala#readme",
   "dependencies": {
-    "@openzeppelin/contracts-ethereum-package": "^3.0.0"
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+    "dotenv": "^8.2.0",
+    "solc": "^0.7.3",
+    "truffle-flattener": "^1.5.0",
+    "truffle-privatekey-provider": "^1.5.0",
+    "web3": "^1.3.0"
   }
 }
