--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/ArcadiaMediaGroup/Gala#readme",
   "dependencies": {
-    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+    "@openzeppelin/contracts": "^3.0.0",
+    "bignumber.js": "^9.0.1",
     "dotenv": "^8.2.0",
+    "ganache-cli": "^6.12.0",
     "solc": "^0.7.3",
     "truffle-flattener": "^1.5.0",
     "truffle-privatekey-provider": "^1.5.0",
