--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "ganache-cli": "^6.12.0",
     "solc": "^0.7.3",
+    "truffle": "^5.1.48",
     "truffle-flattener": "^1.5.0",
     "truffle-privatekey-provider": "^1.5.0",
     "web3": "^1.3.0"
